...
            runAlignment: WrapAlignment.center,
            crossAxisAlignment: WrapCrossAlignment.center,
            spacing: t.spacing.xs,
            runSpacing: t.spacing.xs,
            children: [
              ScalapayFilterChip(
                label: 'catalog.filters'.tr(),
                icon: ScalapayIconData.filter,
                onPressed: onFiltersPressed,
              ),
              ScalapayFilterChip(
                label: 'catalog.sort'.tr(),
                icon: ScalapayIconData.order,
                onPressed: onSortPressed,
              ),
            ],
          ),
        ),
...
